welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:25: error: Int(1) does not take parameters
    for (l<-0 to getMondeHauteur-1()){
                                  ^